--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
 
 <div class="w3-center">
 <img id="dice1" src="./images/map-taiwan.png">
+<img style="display:none" src="./images/map-taiwan0.png">
+<img style="display:none" src="./images/map-taiwan1.png">
+<img style="display:none" src="./images/map-taiwan2.png">
+<img style="display:none" src="./images/map-taiwan3.png">
+<img style="display:none" src="./images/map-taiwan4.png">
+<img style="display:none" src="./images/map-taiwan5.png">
+<img style="display:none" src="./images/map-taiwan6.png">
+<img style="display:none" src="./images/map-taiwan7.png">
+<img style="display:none" src="./images/map-taiwan8.png">
+<img style="display:none" src="./images/map-taiwan9.png">
+<img style="display:none" src="./images/map-taiwan10.png">
+<img style="display:none" src="./images/map-taiwan11.png">
+<img style="display:none" src="./images/map-taiwan12.png">
+<img style="display:none" src="./images/map-taiwan13.png">
+<img style="display:none" src="./images/map-taiwan14.png">
+
+
 </div>
 
 
