--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <title>GoGoGo</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+img {
+  max-width: 100%;
+  height: auto;
+}
+</style>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script type="text/javascript">
     window.onload = function() {
@@ -35,7 +42,7 @@
 
 
 <div class="w3-center">
-<img id="dice1" src="./images/map-taiwan.png">
+<img class="w3-border w3-padding" id="dice1" src="./images/map-taiwan.png">
 <img style="display:none" src="./images/map-taiwan0.png">
 <img style="display:none" src="./images/map-taiwan1.png">
 <img style="display:none" src="./images/map-taiwan2.png">
