--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" /> 
 <style>
 img {
   max-width: 100%;
