--- a/index.html
+++ b/index.html
@@ -43,26 +43,28 @@ img {
 <body>
 
 
-<div class="w3-center">
-<img class="w3-border w3-padding" id="dice1" src="./images/map-taiwan.png">
-<img style="display:none" src="./images/map-taiwan0.png">
-<img style="display:none" src="./images/map-taiwan1.png">
-<img style="display:none" src="./images/map-taiwan2.png">
-<img style="display:none" src="./images/map-taiwan3.png">
-<img style="display:none" src="./images/map-taiwan4.png">
-<img style="display:none" src="./images/map-taiwan5.png">
-<img style="display:none" src="./images/map-taiwan6.png">
-<img style="display:none" src="./images/map-taiwan7.png">
-<img style="display:none" src="./images/map-taiwan8.png">
-<img style="display:none" src="./images/map-taiwan9.png">
-<img style="display:none" src="./images/map-taiwan10.png">
-<img style="display:none" src="./images/map-taiwan11.png">
-<img style="display:none" src="./images/map-taiwan12.png">
-<img style="display:none" src="./images/map-taiwan13.png">
-<img style="display:none" src="./images/map-taiwan14.png">
-
-
-</div>
+ <div class="w3-card-4 w3-margin" style="width:100%">
+    <div class="w3-display-container w3-text-white">
+      <img style="width:100%" class="w3-border w3-padding" id="dice1" src="./images/map-taiwan.png">
+      <img style="display:none" src="./images/map-taiwan0.png">
+      <img style="display:none" src="./images/map-taiwan1.png">
+      <img style="display:none" src="./images/map-taiwan2.png">
+      <img style="display:none" src="./images/map-taiwan3.png">
+      <img style="display:none" src="./images/map-taiwan4.png">
+      <img style="display:none" src="./images/map-taiwan5.png">
+      <img style="display:none" src="./images/map-taiwan6.png">
+      <img style="display:none" src="./images/map-taiwan7.png">
+      <img style="display:none" src="./images/map-taiwan8.png">
+      <img style="display:none" src="./images/map-taiwan9.png">
+      <img style="display:none" src="./images/map-taiwan10.png">
+      <img style="display:none" src="./images/map-taiwan11.png">
+      <img style="display:none" src="./images/map-taiwan12.png">
+      <img style="display:none" src="./images/map-taiwan13.png">
+      <img style="display:none" src="./images/map-taiwan14.png">
+      <div class="w3-xlarge w3-display-bottomleft w3-padding">你渴望旅遊嗎? 點下去吧!</div>
+    </div>
+    </div>
+  </div>
 
 
 </div>
