--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ img {
     </script>
 <body>
 
-
+<div class="w3-container w3-center">
  <div class="w3-card-4 w3-margin" style="width:100%">
     <div class="w3-display-container w3-text-white">
       <img style="width:100%" class="w3-border w3-padding" id="dice1" src="./images/map-taiwan.png">
@@ -65,7 +65,7 @@ img {
     </div>
     </div>
   </div>
-
+</div>
 
 </div>
 
