--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ img {
 <body>
 
 <div class="w3-container w3-center">
- <div class="w3-card-4 w3-margin" style="width:100%">
+ <div style="width:100%">
       <img style="width:100%" class="w3-border w3-padding" id="dice1" src="./images/map-taiwan.png">
       <img style="display:none" src="./images/map-taiwan0.png">
       <img style="display:none" src="./images/map-taiwan1.png">
