--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@ img {
 <body>
 
 <div class="w3-container w3-center">
+    
+<div class="w3-container w3-red w3-center">
+    <h1>你渴望旅遊嗎? 地圖點下去吧!</h1>
+</div>
  <div style="width:100%">
       <img style="width:100%" class="w3-border w3-padding" id="dice1" src="./images/map-taiwan.png">
       <img style="display:none" src="./images/map-taiwan0.png">
@@ -60,7 +64,7 @@ img {
       <img style="display:none" src="./images/map-taiwan12.png">
       <img style="display:none" src="./images/map-taiwan13.png">
       <img style="display:none" src="./images/map-taiwan14.png">
-      <div class="w3-xlarge w3-display-bottomleft w3-padding">你渴望旅遊嗎? 點下去吧!</div>
+      
     </div>
   </div>
 </div>
