--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         </div>
       </div>
     </nav>
+    <div style="height:100px"></div>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
