--- a/games/game01.html
+++ b/games/game01.html
@@ -5,7 +5,6 @@
 <link rel="stylesheet" href="./css/w3.css">
 <script>
   window.onload= function(){
-    document.getElementById('id01').style.display='block'
     var map = document.getElementById('map');
     var btn_all = document.getElementById('btn_all');
     var btn_north = document.getElementById('btn_north');
@@ -192,9 +191,8 @@
 <body>
 
 
-<div class="w3-container">
-  <div id="id01" class="w3-modal">
-    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="width:100% max-width:300px">
+
+    <div class="w3-center">
       <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
         <p>點選按鈕隨機旅遊地點</p>
         <button id="btn_all"   class="w3-button w3-black w3-round">ALL</button>
@@ -230,9 +228,6 @@
         <img style="display:none" src="./images/map-o03.png">
       </div>
 
-
-    </div>
-  </div>
 </div>
             
 </body>
