--- a/games/game03.html
+++ b/games/game03.html
@@ -42,39 +42,44 @@
   <h3 class="w3-bar-item">賓果連線</h3>
   <input style="display:none" id="num" value="1">
   <hr>
-  <div class="w3-row">
+  <div style="display:inline;">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(1)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(2)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(3)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(4)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(5)" type="button" value="00">
   </div>
-  <div class="w3-row">
+  <br>
+  <div style="display:inline;">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(6)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(7)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(8)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(9)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(10)" type="button" value="00">
   </div>
-  <div class="w3-row">
+  <br>
+  <div style="display:inline;">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(11)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(12)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(13)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(14)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(15)" type="button" value="00">
   </div>
-  <div class="w3-row">
+  <br>
+  <div style="display:inline;">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(16)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(17)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(18)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(19)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(20)" type="button" value="00">
   </div>
-  <div class="w3-row">
+  <br>
+  <div style="display:inline;">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(21)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(22)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(23)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(24)" type="button" value="00">
     <input class="w3-button w3-xlarge w3-white w3-border w3-card-4" onclick="getElements(25)" type="button" value="00">
   </div>
+  <br>
 </body>
