--- a/games/game03.html
+++ b/games/game03.html
@@ -39,7 +39,7 @@
 </script>
 
 <body class="w3-center">
-  <h3 class="w3-bar-item">賓果連線</h3>
+  <h3 class="w3-bar-item">賓果連線5x5</h3>
   <input style="display:none" id="num" value="1">
   <hr>
   <div style="display:inline;">
