--- a/index.html
+++ b/index.html
@@ -145,6 +145,16 @@
             <img class="img-fluid mx-auto d-block" src="img/portfolio/bingo.png" alt="賓果連線">
           </a>
         </div>
+        <div class="col-md-6 col-lg-4 col-6">
+          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                <i class="fas fa-search-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid mx-auto d-block" src="img/portfolio/metabolism.png" alt="就吃這個吧">
+          </a>
+        </div>
       </div>
     </div>
   </section>
@@ -243,10 +253,10 @@
       </a>
       <div class="container text-center">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">說走就走</h2>
             <hr class="star-dark mb-5">
-            <iframe src="games/game01.html" frameborder="0" style="width:100%" height="800px" width="100%"></iframe>
+            <iframe src="games/game01.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
           </div>
         </div>
       </div>
@@ -260,10 +270,10 @@
       </a>
       <div class="container text-center">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">骰子吹牛</h2>
             <hr class="star-dark mb-5">
-            <iframe src="games/game02.html" frameborder="0" style="width:100%" height="800px" width="100%"></iframe>
+            <iframe src="games/game02.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
           </div>
         </div>
       </div>
@@ -277,15 +287,32 @@
       </a>
       <div class="container text-center">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">賓果連線</h2>
             <hr class="star-dark mb-5">
-            <iframe src="games/game03.html" frameborder="0" style="width:100%" height="800px" width="100%"></iframe>
+            <iframe src="games/game03.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
           </div>
         </div>
       </div>
     </div>
   </div>
+    <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
+      <div class="portfolio-modal-dialog bg-white">
+        <a class="close-button d-block portfolio-modal-dismiss" href="#">
+          <i class="fa fa-3x fa-times"></i>
+        </a>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-12 mx-auto">
+              <h2 class="text-secondary text-uppercase mb-0">就吃這個吧</h2>
+              <hr class="star-dark mb-5">
+              <iframe src="games/game04.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
