--- a/games/game04.html
+++ b/games/game04.html
@@ -5,52 +5,22 @@
   <title>就吃這個吧</title>
   <link rel="stylesheet" href="./css/style.css">
 
+
 </head>
 <body class="w3-center">
 <!-- partial:index.partial.html -->
 <div class="slotWrap">
-  <div class="no1 active">速食</div>
+  <div class="no1">速食</div>
   <div class="no2">炒飯炒麵</div>
   <div class="no3">熱炒</div>
   <div class="no4">咖哩飯</div>
-  <div class="no10">義大利麵</div>
-  <div class="no11"><button>就吃這個吧!</button></div>
   <div class="no5">水餃</div>
-  <div class="no9">飯糰</div>
-  <div class="no8">火鍋</div>
-  <div class="no7">丼飯</div>
   <div class="no6">鹹酥雞</div>
+  <div class="no7">丼飯</div>
+  <div class="no8">火鍋</div>
+  <div class="no9">飯糰</div>
+  <div class="no10">義大利麵</div>
   <span class="clear"></span>
-  <i class="light light1"></i>
-  <i class="light light2"></i>
-  <i class="light light3"></i>
-  <i class="light light4"></i>
-  <i class="light light5"></i>
-  <i class="light light6"></i>
-  <i class="light light7"></i>
-  <i class="light light8"></i>
-  <i class="light light9"></i>
-  <i class="light light10"></i>
-  <i class="light light11"></i>
-  <i class="light light12"></i>
-  <i class="light light13"></i>
-  <i class="light light14"></i>
-  <i class="light light15"></i>
-  <i class="light light16"></i>
-  <i class="light light17"></i>
-  <i class="light light18"></i>
-  <i class="light light19"></i>
-  <i class="light light20"></i>
-  <i class="light light21"></i>
-  <i class="light light22"></i>
-  <i class="light light23"></i>
-  <i class="light light24"></i>
-  <i class="light light25"></i>
-  <i class="light light26"></i>
-  <i class="light light27"></i>
-  <i class="light light28"></i>
-  <i class="light light29"></i>
-  <i class="light light30"></i>
 </div>
 
 <!-- 彈窗 -->
