--- a/games/game04.html
+++ b/games/game04.html
@@ -11,15 +11,19 @@
 <!-- partial:index.partial.html -->
 <div class="slotWrap">
   <div class="no1">速食</div>
-  <div class="no2">炒飯炒麵</div>
+  <div class="no2">炒飯</div>
   <div class="no3">熱炒</div>
   <div class="no4">咖哩飯</div>
   <div class="no5">水餃</div>
-  <div class="no6">鹹酥雞</div>
+  <div class="no6">豬排</div>
   <div class="no7">丼飯</div>
   <div class="no8">火鍋</div>
   <div class="no9">飯糰</div>
-  <div class="no10">義大利麵</div>
+  <div class="no10">炒麵</div>
+  <div class="no11">雞排</div>
+  <div class="no12">牛排</div>
+  <div class="no13">鹽酥雞</div>
+  <div class="no14">焗烤</div>
   <span class="clear"></span>
 </div>
 
