--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
             <img class="img-fluid mx-auto d-block" src="img/portfolio/metabolism.png" alt="就吃這個吧">
           </a>
         </div>
+        <div class="col-md-6 col-lg-4 col-6">
+          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                <i class="fas fa-search-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid mx-auto d-block" src="img/portfolio/coin.png" alt="擲硬幣">
+          </a>
+        </div>
       </div>
     </div>
   </section>
@@ -296,23 +306,40 @@
       </div>
     </div>
   </div>
-    <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-12 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">就吃這個吧</h2>
-              <hr class="star-dark mb-5">
-              <iframe src="games/game04.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
-            </div>
+  <!-- Portfolio Modal 4 -->
+  <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
+    <div class="portfolio-modal-dialog bg-white">
+      <a class="close-button d-block portfolio-modal-dismiss" href="#">
+        <i class="fa fa-3x fa-times"></i>
+      </a>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2 class="text-secondary text-uppercase mb-0">就吃這個吧</h2>
+            <hr class="star-dark mb-5">
+            <iframe src="games/game04.html" frameborder="0" style="width:100%" height="800px" width="100%"></iframe>
           </div>
         </div>
       </div>
     </div>
+  </div>
+  <!-- Portfolio Modal 5 -->
+  <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
+    <div class="portfolio-modal-dialog bg-white">
+      <a class="close-button d-block portfolio-modal-dismiss" href="#">
+        <i class="fa fa-3x fa-times"></i>
+      </a>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-12 mx-auto">
+            <h2 class="text-secondary text-uppercase mb-0">擲硬幣</h2>
+            <hr class="star-dark mb-5">
+            <iframe src="games/game05.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
