--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
 
@@ -73,7 +73,7 @@
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">App區</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">開發中</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">足跡</a>
             </li>
           </ul>
         </div>
@@ -173,10 +173,10 @@
   <!-- Contact Section -->
   <section id="contact">
     <div class="container">
-      <h2 class="text-center text-uppercase text-secondary mb-0">開發中</h2>
+      <h2 class="text-center text-uppercase text-secondary mb-0">足跡</h2>
       <hr class="star-dark mb-5">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-12 mx-auto">
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
           <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
           <form name="sentMessage" id="contactForm" novalidate="novalidate">
@@ -190,7 +190,7 @@
             </div>
             <br>
             <div id="success" style="display: none">
-              <img class="imga" src="img/construction_pic.gif">
+              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ogMWPRWRtx13jiK152NqwIbHIRR5trwg" width="100%" height="600px"></iframe>
             </div>
             <div class="form-group">
               <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">送出</button>
@@ -201,49 +201,22 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="footer text-center">
-    <div class="container">
-      <div class="w3-center">
-        <p id="demo"></p>
-      </div>
-      <script>
-        // Set the date we're counting down to
-        var countDownDate = new Date("June 15, 2020 00:00:00 GMT+0800 (CST)").getTime();
-
-        // Update the count down every 1 second
-        var x = setInterval(function () {
-
-          // Get today's date and time
-          var now = new Date().getTime();
-
-          // Find the distance between now and the count down date
-          var distance = now - countDownDate;
-
-          // Time calculations for days, hours, minutes and seconds
-          var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-          var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-          var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-          var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-          // Output the result in an element with id="demo"
-          document.getElementById("demo").innerHTML = days + "天 " + hours + "小時 "
-            + minutes + "分 " + seconds + "秒 ";
-
-          // If the count down is over, write some text 
-          if (distance < 0) {
-            clearInterval(x);
-            document.getElementById("demo").innerHTML = "EXPIRED";
-          }
-        }, 1000);
-      </script>
-    </div>
-  </footer>
-
   <div class="copyright py-4 text-center text-white">
     <div class="container">
+      <p id="demo"></p>
       <small>Copyright &copy; Just Love 2020</small>
     </div>
+    <script>
+      var DateDiff = function (sDate1, sDate2) { // sDate1 和 sDate2 是 2016-06-18 格式
+        var oDate1 = new Date(sDate1);
+        var oDate2 = new Date(sDate2);
+        var iDays = parseInt(Math.abs(oDate1 - oDate2) / 1000 / 60 / 60 / 24); // 把相差的毫秒數轉換為天數
+        return iDays+1;
+      };
+      var Today=new Date();
+      var GetDateDiff1 = DateDiff("2020/6/15", Today.getFullYear()+'/'+(Today.getMonth()+1)+'/'+Today.getDate());
+      document.getElementById("demo").innerHTML = GetDateDiff1+"天"
+    </script>
   </div>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
