--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
   <script type="text/javascript">
     window.onload = function () {
       //神秘區
-      password
-      success
-      sendMessageButton
       var password = document.getElementById('password');
       var success = document.getElementById('success');
       var sendMessageButton = document.getElementById('sendMessageButton');
       sendMessageButton.onclick = function () {
         if (password.value == "1111") {
-          alert("密碼正確");
           success.style.display = 'block';
+          sendMessageButton.style.display = 'none'
+          password.style.display = 'none'
         }
         else {
           alert("請輸入正確密碼");
@@ -182,7 +180,6 @@
           <form name="sentMessage" id="contactForm" novalidate="novalidate">
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>輸入密碼</label>
                 <input class="form-control" id="password" type="number" placeholder="輸入密碼" required="required"
                   data-validation-required-message="請輸入密碼">
                 <p class="help-block text-danger"></p>
@@ -190,7 +187,7 @@
             </div>
             <br>
             <div id="success" style="display: none">
-              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ogMWPRWRtx13jiK152NqwIbHIRR5trwg" width="100%" height="600px"></iframe>
+              <iframe src="map.html" width="100%" height="480"></iframe>
             </div>
             <div class="form-group">
               <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">送出</button>
