--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
             <br>
             <div id="success" style="display: none">
-              <iframe src="map.html" width="100%" height="480"></iframe>
+              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&z=8" width="100%" height="600"></iframe>
             </div>
             <div class="form-group">
               <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">送出</button>
@@ -287,7 +287,7 @@
           <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">就吃這個吧</h2>
             <hr class="star-dark mb-5">
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&z=8" width="100%" height="640"></iframe>
+            <iframe src="games/game04.html" width="100%" height="640"></iframe>
           </div>
         </div>
       </div>
