--- a/games/game03.html
+++ b/games/game03.html
@@ -17,7 +17,7 @@
       else {
         x[id].value = num_value;
       }
-      x[id].className = "w3-button w3-blue w3-border";
+      x[id].className = "w3-button w3-circle w3-blue w3-border";
       num_value++;
       num.value = num_value
     }
@@ -25,7 +25,7 @@
 
     }
     if (num_value == 27) {
-      x[id].className = "w3-button w3-border w3-red";
+      x[id].className = "w3-button w3-circle w3-border w3-red";
     }
     if (num_value == 26) {
       num_value++;
@@ -43,43 +43,43 @@
   <input style="display:none" id="num" value="1">
   <hr>
   <div style="display:inline;">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(1)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(2)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(3)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(4)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(5)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(1)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(2)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(3)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(4)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(5)" type="button" value="00">
   </div>
   <br>
   <div style="display:inline;">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(6)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(7)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(8)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(9)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(10)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(6)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(7)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(8)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(9)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(10)" type="button" value="00">
   </div>
   <br>
   <div style="display:inline;">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(11)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(12)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(13)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(14)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(15)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(11)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(12)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(13)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(14)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(15)" type="button" value="00">
   </div>
   <br>
   <div style="display:inline;">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(16)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(17)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(18)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(19)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(20)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(16)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(17)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(18)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(19)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(20)" type="button" value="00">
   </div>
   <br>
   <div style="display:inline;">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(21)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(22)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(23)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(24)" type="button" value="00">
-    <input class="w3-button w3-white w3-border w3-card-4" onclick="getElements(25)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(21)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(22)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(23)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(24)" type="button" value="00">
+    <input class="w3-button w3-circle w3-white w3-border w3-card-4" onclick="getElements(25)" type="button" value="00">
   </div>
   <br>
 </body>
