--- a/index.html
+++ b/index.html
@@ -180,17 +180,17 @@
           <form name="sentMessage" id="contactForm" novalidate="novalidate">
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <input class="form-control" id="password" type="number" placeholder="輸入密碼" required="required"
+                <input style="display: none" class="form-control" id="password" type="number" placeholder="輸入密碼" required="required"
                   data-validation-required-message="請輸入密碼">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <br>
-            <div id="success" style="display: none">
-              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&z=9" width="100%" height="800"></iframe>
+            <div id="success">
+              <iframe src="https://www.google.com/maps/d/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&hl=zh-TW;z=15" width="100%" height="480"></iframe>
             </div>
             <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">送出</button>
+              <button style="display: none" type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">送出</button>
             </div>
           </form>
         </div>
