--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">App區</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#timeline">時間軸</a>
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">足跡</a>
             </li>
           </ul>
@@ -167,6 +170,18 @@
     </div>
   </section>
 
+  <!-- timeline Section -->
+  <section id="timeline">
+    <div class="container">
+      <h2 class="text-center text-uppercase text-secondary mb-0">時間軸</h2>
+      <hr class="star-dark mb-5">
+      <div class="row">
+        <div class="col-lg-12 mx-auto">
+              <iframe src="timeline/index.html" frameborder="0" width="100%" height="1000"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Contact Section -->
   <section id="contact">
@@ -175,28 +190,12 @@
       <hr class="star-dark mb-5">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate">
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <input style="display: none" class="form-control" id="password" type="number" placeholder="輸入密碼" required="required"
-                  data-validation-required-message="請輸入密碼">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success">
               <iframe src="https://www.google.com/maps/d/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&hl=zh-TW;z=15" width="100%" height="480"></iframe>
-            </div>
-            <div class="form-group">
-              <button style="display: none" type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">送出</button>
-            </div>
-          </form>
         </div>
       </div>
     </div>
   </section>
+
 
   <div class="copyright py-4 text-center text-white">
     <div class="container">
