--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template -->
   <link href="css/freelancer.min.css" rel="stylesheet">
-
 </head>
 
 <body id="page-top">
@@ -137,9 +136,33 @@
               </div>
 
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body">
+                <div class="card-body text-center">
+                    <div class="btn-group mr-2" role="group" aria-label="First group">
+                      <button type="button" class="btn btn-primary">臺北x3</button>
+                      <button type="button" class="btn btn-primary">宜蘭</button>
+                      <button type="button" class="btn btn-primary">桃園</button>
+                      <button type="button" class="btn btn-primary">新竹</button>
+                    </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Second group">
+                      <button type="button" class="btn btn-success">苗栗x1</button>
+                      <button type="button" class="btn btn-success">台中</button>
+                      <button type="button" class="btn btn-success">彰化</button>
+                      <button type="button" class="btn btn-success">雲林</button>
+                    </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Third group">
+                      <button type="button" class="btn btn-warning">嘉義x1</button>
+                      <button type="button" class="btn btn-warning">台南</button>
+                      <button type="button" class="btn btn-warning">高雄</button>
+                      <button type="button" class="btn btn-warning">屏東</button>
+                    </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Forth group">
+                      <button type="button" class="btn btn-danger">花蓮</button>
+                      <button type="button" class="btn btn-danger">台東</button>
+                    </div>
+
                   <iframe src="https://www.google.com/maps/d/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&hl=zh-TW&z=8"
                     width="100%" height="1000"></iframe>
+                  
                 </div>
               </div>
             </div>
