--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
             <img class="img-fluid mx-auto d-block" src="img/portfolio/coin.png" alt="擲硬幣">
           </a>
         </div>
+        <div class="col-md-6 col-lg-4 col-6">
+          <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                <i class="fas fa-search-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid mx-auto d-block" src="img/portfolio/wizard.png" alt="算命">
+          </a>
+        </div>
       </div>
     </div>
   </section>
@@ -162,7 +172,7 @@
 
                   <iframe src="https://www.google.com/maps/d/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&hl=zh-TW&z=8"
                     width="100%" height="1000"></iframe>
-                  
+                    
                 </div>
               </div>
             </div>
@@ -286,6 +296,23 @@
       </div>
     </div>
   </div>
+    <!-- Portfolio Modal 6 -->
+    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
+      <div class="portfolio-modal-dialog bg-white">
+        <a class="close-button d-block portfolio-modal-dismiss" href="#">
+          <i class="fa fa-3x fa-times"></i>
+        </a>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-12 mx-auto">
+              <h2 class="text-secondary text-uppercase mb-0">算命</h2>
+              <hr class="star-dark mb-5">
+              <iframe src="games/game06.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
