--- a/games/game06.html
+++ b/games/game06.html
@@ -27,6 +27,10 @@
 <body>
   <div class="w3-center">
     <img id="btn1" src="./images/0.jpg">
+    <img style="display: none;" src="./images/1.gif">
+    <img style="display: none;" src="./images/2.gif">
+    <img style="display: none;" src="./images/3.gif">
     <p id="demo"></p>
+    <p style="display: none;">唵嘛呢叭咪吽（梵文：ॐ मणि पद्मे हूँ，oṃ maṇi padme hūṃ；藏文：ༀ་མ་ཎི་པད་མེ་ཧཱུྃ）</p>
   </div>
 </body>
