--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                 <div class="card-body text-center">
                     <div class="btn-group mr-2" role="group" aria-label="First group">
-                      <button type="button" class="btn btn-primary">臺北x3</button>
+                      <button type="button" class="btn btn-primary">臺北x4</button>
                       <button type="button" class="btn btn-primary">宜蘭</button>
                       <button type="button" class="btn btn-primary">桃園</button>
                       <button type="button" class="btn btn-primary">新竹</button>
@@ -156,6 +156,7 @@
                     <div class="btn-group mr-2" role="group" aria-label="Second group">
                       <button type="button" class="btn btn-success">苗栗x1</button>
                       <button type="button" class="btn btn-success">台中</button>
+                      <button type="button" class="btn btn-success">南投</button>
                       <button type="button" class="btn btn-success">彰化</button>
                       <button type="button" class="btn btn-success">雲林</button>
                     </div>
