--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid mx-auto d-block" src="img/portfolio/wizard.png" alt="算命">
+            <img class="img-fluid mx-auto d-block" src="img/portfolio/moonblock.png" alt="算命">
           </a>
         </div>
       </div>
