--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
                   <div class="row">
-                    <div class="col-4">
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                       <div class="list-group" id="list-tab" role="tablist">
 
                         <div class="accordion" id="accordionExample1">
@@ -229,12 +229,12 @@
                       </div>
                     </div>
 
-                    <div class="col-8">
+                    <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
                       <div class="card text-left">
                         <div class="card-body">
-                          <i class="fa fa-home" aria-hidden="true"></i></i><p id="sleep"></p>
-                          <i class="fa fa-certificate" aria-hidden="true"></i></i><p id="eat"></p>
-                          <i class="fa fa-users" aria-hidden="true"></i></i></i><p id="play"></p>
+                          <i class="fa fa-home" aria-hidden="true"></i></i><p id="sleep"> </p>
+                          <i class="fa fa-certificate" aria-hidden="true"></i></i><p id="eat"> </p>
+                          <i class="fa fa-users" aria-hidden="true"></i></i></i><p id="play"> </p>
                         </div>
                       </div>
                     </div>
