--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid mx-auto d-block" src="img/portfolio/dice.png" alt="骰子吹牛">
+            <img class="img-fluid mx-auto d-block" src="img/portfolio/A2048.png" alt="2048">
           </a>
         </div>
         <div class="col-md-6 col-lg-4 col-6">
@@ -332,7 +332,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">骰子吹牛</h2>
+            <h2 class="text-secondary text-uppercase mb-0">2048</h2>
             <hr class="star-dark mb-5">
             <iframe src="games/game02.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
           </div>
