--- a/games/game02.html
+++ b/games/game02.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 2048 game</title>
+  <title>2048</title>
   <link rel="stylesheet" href="./css/02_style.css">
 
 </head>
