--- a/games/game02.html
+++ b/games/game02.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>2048</title>
+  <title>CodePen - 2048</title>
   <link rel="stylesheet" href="./css/02_style.css">
 
 </head>
@@ -13,13 +13,12 @@
     <h1 class="title">2048</h1>
     <div class="score-container">0</div>
   </div>
-  <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
 
   <div class="game-container">
     <div class="game-message">
       <p></p>
       <div class="lower">
-        <a class="retry-button">Try again</a>
+        <a class="retry-button">重玩</a>
       </div>
     </div>
 
@@ -54,9 +53,14 @@
 
     </div>
   </div>
+
+
 </div>
+
+  
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.6/hammer.min.js'></script>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.6/hammer.min.js'></script><script  src="./src/02_script.js"></script>
+  <script  src="./src/02_script.js"></script>
 
 </body>
 </html>
