--- a/games/game02.html
+++ b/games/game02.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - bouncing egg</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/02_style.css">
 
 </head>
 <body>
