--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid mx-auto d-block" src="img/portfolio/paint-palette.png" alt="畫畫">
+            <img class="img-fluid mx-auto d-block" src="img/portfolio/notebook.png" alt="記事本">
           </a>
         </div>
         <div class="col-md-6 col-lg-4 col-6">
@@ -232,48 +232,48 @@
                     <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
                       <div class="card text-left">
                         <div class="card-body">
-                          <i class="fa fa-home" aria-hidden="true"></i></i><p id="sleep"> </p>
-                          <i class="fa fa-certificate" aria-hidden="true"></i></i><p id="eat"> </p>
-                          <i class="fa fa-users" aria-hidden="true"></i></i></i><p id="play"> </p>
+                          <i class="fa fa-home" aria-hidden="true"></i></i>
+                          <p id="sleep"> </p>
+                          <i class="fa fa-certificate" aria-hidden="true"></i></i>
+                          <p id="eat"> </p>
+                          <i class="fa fa-users" aria-hidden="true"></i></i></i>
+                          <p id="play"> </p>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&hl=zh-TW&z=8"
+                  width="100%" height="1000"></iframe>
               </div>
 
               <script>
-                var taipai_btn=document.getElementById("taipei")
-                var chiayi_btn=document.getElementById("chiayi")
-                var miaoli_btn=document.getElementById("miaoli")
-                var sleep=document.getElementById("sleep")
-                var eat=document.getElementById("eat")
-                var play=document.getElementById("play")
-                taipai_btn.onclick=function(){
-                  sleep.innerHTML="摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)"
-                  eat.innerHTML="肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店"
-                  play.innerHTML="寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城"
+                var taipai_btn = document.getElementById("taipei")
+                var chiayi_btn = document.getElementById("chiayi")
+                var miaoli_btn = document.getElementById("miaoli")
+                var sleep = document.getElementById("sleep")
+                var eat = document.getElementById("eat")
+                var play = document.getElementById("play")
+                taipai_btn.onclick = function () {
+                  sleep.innerHTML = "摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)"
+                  eat.innerHTML = "肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店"
+                  play.innerHTML = "寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城"
                 }
-                chiayi_btn.onclick=function(){
-                  sleep.innerHTML=" "
-                  eat.innerHTML="大同火雞肉飯"
-                  play.innerHTML="森林之歌/嘉義公園/仁義潭水庫"
+                chiayi_btn.onclick = function () {
+                  sleep.innerHTML = " "
+                  eat.innerHTML = "大同火雞肉飯"
+                  play.innerHTML = "森林之歌/嘉義公園/仁義潭水庫"
                 }
-                miaoli_btn.onclick=function(){
-                  sleep.innerHTML=" "
-                  eat.innerHTML="石二鍋"
-                  play.innerHTML="苗栗縣竹南鎮新南國民小學"
+                miaoli_btn.onclick = function () {
+                  sleep.innerHTML = " "
+                  eat.innerHTML = "石二鍋"
+                  play.innerHTML = "苗栗縣竹南鎮新南國民小學"
                 }
               </script>
-              <iframe src="https://www.google.com/maps/d/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&hl=zh-TW&z=8"
-                width="100%" height="1000"></iframe>
-
             </div>
           </div>
         </div>
       </div>
-    </div>
-    </div>
     </div>
   </section>
 
@@ -332,7 +332,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">畫畫</h2>
+            <h2 class="text-secondary text-uppercase mb-0">記事本</h2>
             <hr class="star-dark mb-5">
             <iframe src="games/game02.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
           </div>
