--- a/games/game02.html
+++ b/games/game02.html
@@ -11,7 +11,8 @@
     <ul class="w3-ul w3-card-4">
       <li class="w3-bar">
         <div class="w3-bar-item">
-          <span class="w3-large">北投溫泉會館</span><br>
+          <img src="./images/g2_001.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
+          <span class="w3-xlarge">北投溫泉會館</span><br>
           <span><a href="https://www.booking.com/hotel/tw/ri-sheng-sheng-jia-he-wu-guo-ji-wen-quan-fan-dian.zh-tw.html?aid=805543;label=new-beitou-hot-spring-ms1pPNZfdKs2JiSgcR6VzAS393025792475%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-297601666715%3Akwd-298307754951%3Alp1028790%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YTptaWLFanNKcYTxELxeWjk;sid=ae12c2ad0c9ef0ad79e970d2b2c84659">連結</a></span>
         </div>
       </li>
