--- a/games/game02.html
+++ b/games/game02.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="w3-container">
+
     <ul class="w3-ul w3-card-4">
 
       <li class="w3-bar"><a href="https://www.booking.com/searchresults.zh-tw.html?aid=367380;label=sunmoonlake-karuizawa-villa-MarzfNWG71jxjN4KHlI6BQS438060331909%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-297601666715%3Akwd-64507151734%3Alp1028790%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YcsZ-Id2vkzIS3r51lUy6dQ;sid=ae12c2ad0c9ef0ad79e970d2b2c84659;city=-2640880;expand_sb=1;highlighted_hotels=711681;hlrd=no_dates;keep_landing=1;redirected=1;source=hotel&gclid=CjwKCAjw8MD7BRArEiwAGZsrBcMQT1jaR9o5LyLGkKpUp6c4IQ8_W4k8T37YnEQXSvIQCrlUUTsCJhoCfHoQAvD_BwE&room1=A,A,;">
@@ -18,6 +19,38 @@
         </div>
         </a>
       </li>
+      <li class="w3-bar"><a href="https://www.dcard.tw/f/food/p/234467427">
+        <img src="./images/g2_breakfast.png" class="w3-bar-item" style="width:70px">
+        <div class="w3-bar-item">
+          <span class="w3-large">日月潭伊達紹包子</span><br>
+          <span></span>
+        </div>
+        </a>
+      </li>
+      <li class="w3-bar"><a href="https://blog.kkday.com/57515/asia-taiwan-nantou-sun-moon-lake">
+        <img src="./images/g2_map.png" class="w3-bar-item" style="width:70px">
+        <div class="w3-bar-item">
+          <span class="w3-large">旅遊景點介紹</span><br>
+          <span></span>
+        </div>
+        </a>
+      </li>
+      <li class="w3-bar"><a href="http://www.ntbus.com.tw/tour-sml.html">
+        <img src="./images/g2_bus.png" class="w3-bar-item" style="width:70px">
+        <div class="w3-bar-item">
+        <span class="w3-large">台中到日月潭 乘車資訊</span><br>
+        <img src="./images/t1.png">
+        <img src="./images/t2.png">
+          <span></span>
+        </div>
+        </a>
+      </li>
+    </ul>
+
+    <br><br><br>
+    <ul class="w3-ul w3-card-4">
+
+
       <li class="w3-bar"><a href="https://www.booking.com/hotel/tw/ri-sheng-sheng-jia-he-wu-guo-ji-wen-quan-fan-dian.zh-tw.html?aid=805543;label=new-beitou-hot-spring-ms1pPNZfdKs2JiSgcR6VzAS393025792475%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-297601666715%3Akwd-298307754951%3Alp1028790%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YTptaWLFanNKcYTxELxeWjk;sid=ae12c2ad0c9ef0ad79e970d2b2c84659">
         <img src="./images/g2_hotel.png" class="w3-bar-item" style="width:70px">
         <div class="w3-bar-item">
