--- a/games/game02.html
+++ b/games/game02.html
@@ -39,8 +39,8 @@
         <img src="./images/g2_bus.png" class="w3-bar-item" style="width:70px">
         <div class="w3-bar-item">
         <span class="w3-large">台中到日月潭 乘車資訊</span><br>
-        <img src="./images/t1.png">
-        <img src="./images/t2.png">
+        <img src="./images/t1.PNG">
+        <img src="./images/t2.PNG">
           <span></span>
         </div>
         </a>
