--- a/games/game02.html
+++ b/games/game02.html
@@ -48,7 +48,14 @@
     <br><br><br>
     <ul class="w3-ul w3-card-4">
 
-
+      <li class="w3-bar"><a href="http://keketravel.cc/3764/?from=instant_article&fbclid=IwAR1Ti2cCp4-iwe_eBkpV_-VEX3fsOOScBcho9ZiDeHxKrfZg9IHdcEdkFJw">
+        <img src="./images/g2_map.png" class="w3-col s2 m2 l2 w3-bar-item" style="width:70px">
+        <div class="w3-bar-item w3-col s10 m10 l10">
+          <span class="w3-large">苗栗</span><br>
+          <span>「泡湯+景點」全攻略</span>
+        </div>
+        </a>
+      </li>
       <li class="w3-bar"><a href="https://www.booking.com/hotel/tw/ri-sheng-sheng-jia-he-wu-guo-ji-wen-quan-fan-dian.zh-tw.html?aid=805543;label=new-beitou-hot-spring-ms1pPNZfdKs2JiSgcR6VzAS393025792475%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-297601666715%3Akwd-298307754951%3Alp1028790%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YTptaWLFanNKcYTxELxeWjk;sid=ae12c2ad0c9ef0ad79e970d2b2c84659">
         <img src="./images/g2_hotel.png" class="w3-col s2 m2 l2 w3-bar-item" style="width:70px">
         <div class="w3-bar-item w3-col s10 m10 l10">
