--- a/timeline/index.html
+++ b/timeline/index.html
@@ -122,7 +122,7 @@
 				    <p>第二天吃完飯店早餐出門，潘若迪又是你:D，又看到了笑死。後來去租車店，賢慧倉鼠一樣發揮了他的賢慧，選擇租機車不租電動腳踏車，都是500一個一整天一個兩小時，我們是碗不是盤子:D</p>
 				    <p>去了向山拍了很多照片，還去了伊達邵老街吃了之前一直想吃的包子，但其實沒這麼神。山豬肉調味也普普，只有冰淇淋跟紅茶好喝:D，沿途一直看到有人拿著竹子肉串！好想吃喔！後來發現是烤麻糬:D 最後被雞翅包飯雷了一頓，但發現了你以前跟家人住的飯店！好神奇XD</p>
 				    <p>回程去了阿婆茶葉蛋，結論是..恩..比7-11入味XD 後來回飯店我們都曬傷了XD 一樣找了一間餐館吃飯，今天的好吃多了~</p>
-				    <p>後來我們去湖邊走走，然後沿路看星星，偷窺日月潭大飯店的人，看人家露營，聽到歌聲，聽到阿姨吐槽，亨唱不上去還換歌，我們決定去那間酒吧喝一杯:D</p>
+				    <p>後來我們去湖邊走走，然後沿路看星星，偷窺日月潭大飯店的人，看人家露營，聽到阿姨吐槽駐唱唱不上去還換歌，我們決定去那間酒吧喝一杯:D</p>
 				    <p>第三天直接睡死沒吃到早餐:D，然後中午吃火鍋，準備回程囉~坐了好久的車，終於回竹南了，我帶你去尚順逛了一下，吃個飯就回去了，不免俗的還是要偷哭一下啦，期待下次見面:D</p>
         </div>
       </div>         
