--- a/games/game02.html
+++ b/games/game02.html
@@ -82,17 +82,17 @@
         { // 事件
 					title: "Hi3Hi4 台北苗栗",
           start: "2020-08-23",
-          end: "2020-08-24"
+          end: "2020-08-24 12:00:00"
         },
         { // 事件
 					title: "Hi5 台北",
           start: "2020-09-05",
-          end: "2020-09-06"
+          end: "2020-09-06 12:00:00"
         },
         { // 事件
 					title: "Hi6 台北",
           start: "2020-09-18",
-          end: "2020-09-20"
+          end: "2020-09-20 12:00:00"
         },
         { // 事件
 					title: "Hi7 您來了苗栗",
@@ -101,17 +101,17 @@
         { // 事件
 					title: "Hi8 雙十連假日月潭",
           start: "2020-10-09",
-          end: "2020-10-11"
+          end: "2020-10-11 12:00:00"
         },
         { // 事件
 					title: "預計 清大面試回台北",
           start: "2020-11-13",
-          end: "2020-11-15"
+          end: "2020-11-15 12:00:00"
         },
         { // 事件
 					title: "預計 聖誕節",
           start: "2020-12-25",
-          end: "2020-12-27"
+          end: "2020-12-27 12:00:00"
         },
 			]
 		});
