例行性更新

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                               data-parent="#accordionExample1">
                               <div class="card-body">
                                 <button id="miaoli" type="button" class="btn btn-outline-primary btn-block">苗栗 <span
-                                    class="badge badge-danger badge-pill">2</span></button>
+                                    class="badge badge-danger badge-pill">3</span></button>
                                 <button id="nantou" type="button" class="btn btn-outline-primary btn-block">南投 <span
                                     class="badge badge-danger badge-pill">1</span></button>
                               </div>
@@ -325,8 +325,8 @@
                 }
                 miaoli_btn.onclick = function () {
                   sleep.innerHTML = " "
-                  eat.innerHTML = "石二鍋/路易莎咖啡(竹南大營店)"
-                  play.innerHTML = "龍鳳漁港/客家圓樓/苗栗縣竹南鎮新南國民小學/尚順育樂世界"
+                  eat.innerHTML = "石二鍋/路易莎咖啡(竹南大營店)/虎藏燒肉丼食所-苗栗竹南店"
+                  play.innerHTML = "龍鳳漁港/客家圓樓/苗栗縣竹南鎮新南國民小學/尚順育樂世界/竹南運動公園"
                 }
                 nantou_btn.onclick = function () {
                   sleep.innerHTML = "日月潭青井澤休閒旅店"
