--- a/timeline/index.html
+++ b/timeline/index.html
@@ -22,9 +22,9 @@
 
   <section class="timeline">
     <div class="container">
+
       <div class="timeline-item">
         <div class="timeline-img"></div>
-
         <div class="timeline-content js--fadeInLeft">
           <h2>冰淇淋日</h2>
        		<div class="date">20200615</div>
@@ -129,7 +129,20 @@
             <p>第三天直接睡死沒吃到早餐:D，然後中午吃火鍋，準備回程囉~坐了好久的車，終於回竹南了，我帶你去尚順逛了一下，吃個飯就回去了，不免俗的還是要偷哭一下啦，期待下次見面:D</p>
             <br>
         </div>
-      </div>         
+      </div>     
+      
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content js--fadeInLeft">
+          <h2>Hi9! 中央面試來苗栗</h2>
+       		<div class="date">20201103</div>
+           <p>面試辛苦了!</p>
+           <p>帶你去吃丼飯但你都吃不下 :( 這不是平常的你啦，知道師大沒上後，也替你感到難過</p>
+           <p>後來帶你去運動公園散散心，風真的很大很冷呢，快穿上我的醜醜外套吧 :D 雖然醜 但有我滿滿的溫暖喔!</p>
+        </div>
+      </div> 
+ 
           
     </div>
   </section>
